exercises/00_install/ingree.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
